--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <h1>😂 Willkommen auf der superlustigen Goethe-Seite 😂</h1>
 
   <div id="foundCount">Goethe-Kopf gefunden: 0 mal</div>
-  <img id="goetheHead" src="attached_assets/Goethe Kopf_1750770014760.png" alt="Goethe Kopf" title="Finde mich!" />
+  <img id="goetheHead" src="attached_assets/Goethe Kopf.png" alt="Goethe Kopf" title="Finde mich!" />
 
   <div class="question-box" id="quizBox">
     <div id="question">Lade Fragen...</div>
